# eu-shake-map

./: .dockerignore  Dockerfile  README.md  app.py  gfz.json  ingv.json  pyproject.toml
.github/workflows/: docker.yml
