[project]
name = "eu-shake-map"
version = "0.1.0"
description = "USGS earthquakes Matplotlib viz (FastAPI)"
authors = [{ name = "You" }]
requires-python = ">=3.9"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "matplotlib",
  "requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
